test/integration/bad/unnormalized/lupdf_in_trans_params.stan
transformed parameters {
    real p;
    real y = normal_lupdf(p| 0, 1);
}